git-svn-id: https://www.seasar.org/svn/chura/trunk@554 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.projects/plugin.xml
+++ b/dolteng/org.seasar.dolteng.projects/plugin.xml
@@ -74,6 +74,7 @@
 			<entry kind="file" path="${mainResourcePath}/creator.dicon" />
 			<entry kind="file"
 				path="${mainResourcePath}/customizer.dicon" />
+			<entry kind="file" path="${mainResourcePath}/env_ut.txt" />
 			<entry kind="file" path="${mainResourcePath}/env.txt" />
 			<entry kind="file" path="${mainResourcePath}/jdbc.dicon" />
 			<entry kind="file"
@@ -296,6 +297,8 @@
 			<entry kind="file"
 				path="WEB-INF/src/main/resources/customizer.dicon" />
 			<entry kind="file"
+				path="WEB-INF/src/main/resources/env_ut.txt" />
+			<entry kind="file"
 				path="WEB-INF/src/main/resources/env.txt" />
 			<entry kind="file"
 				path="WEB-INF/src/main/resources/jdbc.dicon" />
@@ -413,5 +416,4 @@
 		</handler>
 	</project>
    </extension>
-
 </plugin>
