--- a/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -54,10 +54,7 @@ PREFERENCE_VIEW_TYPE=View Type :
 PREFERENCE_DAO_TYPE=Dao Type :
 PREFERENCE_USE_PAGE_MARKER=Use Page Marker
 PREFERENCE_USE_DI_MARKER=Use DI Marker
-PREFERENCE_DEFAULT_ENTITY_PKG=Default Entity Package
-PREFERENCE_DEFAULT_DAO_PKG=Default Dao Package
-PREFERENCE_DEFAULT_DTO_PKG=Default Dto Package
-PREFERENCE_DEFAULT_WEB_PKG=Default Web Package
+PREFERENCE_DEFAULT_ROOT_PKG=Default Root Package
 PREFERENCE_ORM_XML_PATH=OrmXmlPath
 PREFERENCE_SOURCE_PATH=SourcePath
 PREFERENCE_RESOURCE_PATH=ResourcePath
