[Seasar-user:7654] [Dolteng]DaoやScaffold生成機能における 出力先について。対応
git-svn-id: https://www.seasar.org/svn/chura/trunk@555 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -54,10 +54,7 @@ PREFERENCE_VIEW_TYPE=View Type :
 PREFERENCE_DAO_TYPE=Dao Type :
 PREFERENCE_USE_PAGE_MARKER=Use Page Marker
 PREFERENCE_USE_DI_MARKER=Use DI Marker
-PREFERENCE_DEFAULT_ENTITY_PKG=Default Entity Package
-PREFERENCE_DEFAULT_DAO_PKG=Default Dao Package
-PREFERENCE_DEFAULT_DTO_PKG=Default Dto Package
-PREFERENCE_DEFAULT_WEB_PKG=Default Web Package
+PREFERENCE_DEFAULT_ROOT_PKG=Default Root Package
 PREFERENCE_ORM_XML_PATH=OrmXmlPath
 PREFERENCE_SOURCE_PATH=SourcePath
 PREFERENCE_RESOURCE_PATH=ResourcePath
