--- a/.classpath
+++ b/.classpath
@@ -5,7 +5,6 @@
 	<classpathentry kind="src" output="target/test-classes" path="src/test/java"/>
 	<classpathentry kind="src" output="target/test-classes" path="src/test/resources"/>
 	<classpathentry exported="true" kind="lib" path="template/jars/aopalliance-1.0.jar"/>
-	<classpathentry kind="lib" path="template/jars/commons-logging-1.0.4.jar" sourcepath="template/jars/sources/commons-logging-1.0.4-src.zip"/>
 	<classpathentry exported="true" kind="lib" path="template/jars/geronimo-j2ee_1.4_spec-1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="template/jars/log4j-1.2.13.jar"/>
 	<classpathentry exported="true" kind="lib" path="template/jars/ognl-2.6.7.jar"/>
@@ -24,6 +23,7 @@
 	<classpathentry exported="true" kind="lib" path="template/jars/h2-2007-03-04.jar"/>
 	<classpathentry kind="lib" path="template/jars/kuina-dao-1.0.0-rc1.jar"/>
 	<classpathentry kind="lib" path="template/jars/s2-tiger-2.4.10.jar"/>
+	<classpathentry kind="lib" path="template/jars/commons-logging-1.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="output" path="target/classes"/>
