--- a/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -106,3 +106,5 @@ WIZARD_SQL_FILE=SQL Path :
 WIZARD_BINDING_DTO_FILE=Binding DTO File
 RENAME_TO=Rename to {0}
 RETYPE_TO=Change type to {0}
+PACKAGEFRAGMENT_ROOT=PackageFragmentRoot :
+ROOT_PKG=Root Package Name :
