Scaffoldの時、出力先ディレクトリ及び、ルートパッケージ名を選択出来る様にした。
git-svn-id: https://www.seasar.org/svn/chura/trunk@559 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -106,3 +106,5 @@ WIZARD_SQL_FILE=SQL Path :
 WIZARD_BINDING_DTO_FILE=Binding DTO File
 RENAME_TO=Rename to {0}
 RETYPE_TO=Change type to {0}
+PACKAGEFRAGMENT_ROOT=PackageFragmentRoot :
+ROOT_PKG=Root Package Name :
