--- a/build.properties
+++ b/build.properties
@@ -6,7 +6,8 @@ bin.includes = plugin.xml,\
                icons/,\
                template/,\
                template/jars/kuina-dao-1.0.0-rc1.jar,\
-               template/jars/s2-tiger-2.4.10.jar
+               template/jars/s2-tiger-2.4.10.jar,\
+               template/jars/geronimo-jpa_3.0_spec-1.0.jar
 jars.compile.order = dolteng-core.jar
 source.dolteng-core.jar = target/classes/,\
                           src/main/java/,\
