--- a/dolteng/org.seasar.dolteng.eclipse.plugin/build.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/build.properties
@@ -4,10 +4,7 @@ bin.includes = plugin.xml,\
                plugin.properties,\
                plugin_ja.properties,\
                icons/,\
-               template/,\
-               template/jars/kuina-dao-1.0.0-rc1.jar,\
-               template/jars/s2-tiger-2.4.10.jar,\
-               template/jars/geronimo-jpa_3.0_spec-1.0.jar
+               template/
 jars.compile.order = dolteng-core.jar
 source.dolteng-core.jar = target/classes/,\
                           src/main/java/,\
