--- a/dolteng/org.seasar.dolteng.projects/template/520/pom.xml
+++ b/dolteng/org.seasar.dolteng.projects/template/520/pom.xml
@@ -89,7 +89,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.geronimo.specs</groupId>
-			<artifactId>geronimo-jta_1.0.1B_spec</artifactId>
+			<artifactId>geronimo-jta_1.1_spec</artifactId>
 			<version>1.0</version>
 		</dependency>
 		<dependency>
@@ -105,32 +105,32 @@
 		<dependency>
 			<groupId>org.seasar.container</groupId>
 			<artifactId>s2-extension</artifactId>
-			<version>2.4.10</version>
+			<version>2.4.13</version>
 		</dependency>
 		<dependency>
 			<groupId>org.seasar.container</groupId>
 			<artifactId>s2-framework</artifactId>
-			<version>2.4.10</version>
+			<version>2.4.13</version>
 		</dependency>
 		<dependency>
 			<groupId>org.seasar.container</groupId>
 			<artifactId>s2-tiger</artifactId>
-			<version>2.4.10</version>
+			<version>2.4.13</version>
 		</dependency>
 		<dependency>
 			<groupId>org.seasar.teeda</groupId>
 			<artifactId>teeda-extension</artifactId>
-			<version>1.0.4</version>
+			<version>1.0.7</version>
 		</dependency>
 		<dependency>
 			<groupId>org.seasar.teeda</groupId>
 			<artifactId>teeda-ajax</artifactId>
-			<version>1.0.4</version>
+			<version>1.0.7</version>
 		</dependency>
 		<dependency>
 			<groupId>org.seasar.teeda</groupId>
 			<artifactId>teeda-tiger</artifactId>
-			<version>1.0.4</version>
+			<version>1.0.7</version>
 		</dependency>
 		<dependency>
 			<groupId>org.seasar.teeda</groupId>
@@ -140,17 +140,17 @@
 		<dependency>
 			<groupId>org.seasar.dao</groupId>
 			<artifactId>s2-dao</artifactId>
-			<version>1.0.40</version>
+			<version>1.0.43</version>
 		</dependency>
 		<dependency>
 			<groupId>org.seasar.dao</groupId>
 			<artifactId>s2-dao-tiger</artifactId>
-			<version>1.0.40</version>
+			<version>1.0.43</version>
 		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<version>1.0.20061217</version>
+			<version>1.0.20070304</version>
 		</dependency>
 	</dependencies>
 </project>
