--- a/dolteng/org.seasar.dolteng.projects/plugin.xml
+++ b/dolteng/org.seasar.dolteng.projects/plugin.xml
@@ -49,7 +49,7 @@
          point="org.seasar.dolteng.projects.newProject">
       	<project id="0" name="Base" jre="1.4"
 		root="template/resources,template/licenses,template/resources/data,template/jars,template/jars/sources"
-		resouceLoader="org.seasar.dolteng.projects.loader.impl.CompositeResouceLoader">
+		resourceLoader="org.seasar.dolteng.eclipse.loader.impl.CompositeResourceLoader">
 		<handler type="default">
 			<entry kind="file" path="LICENSE.txt" />
 			<entry kind="file" path="licenses/LICENSE.h2.html" />
@@ -137,7 +137,7 @@
 	</project>
 	<project id="10" name="Teeda Only" jre="1.4"
 		root="template/WEB-INF,template/10" extends="0" displayOrder="O01"
-		resouceLoader="org.seasar.dolteng.projects.loader.impl.CompositeResouceLoader">
+		resourceLoader="org.seasar.dolteng.eclipse.loader.impl.CompositeResourceLoader">
 		<handler type="default">
 			<entry kind="file" path=".tomcatplugin" />
 			<entry kind="file"
@@ -186,7 +186,7 @@
 	</project>
 	<project id="11" name="S2Dao Only" jre="1.4" root="template/11"
 		extends="0" displayOrder="O02"
-		resouceLoader="org.seasar.dolteng.projects.loader.impl.CompositeResouceLoader">
+		resourceLoader="org.seasar.dolteng.eclipse.loader.impl.CompositeResourceLoader">
 		<handler type="classpath">
 			<entry kind="file"
 				path="${testLibPath}/geronimo-j2ee_1.4_spec-1.0.jar" />
@@ -195,10 +195,10 @@
 	</project>
 	<project id="20" name="Super Agile(Teeda + S2Dao)" jre="1.4"
 		root="template/20" extends="10,11" displayOrder="C01"
-		resouceLoader="org.seasar.dolteng.projects.loader.impl.CompositeResouceLoader">
+		resourceLoader="org.seasar.dolteng.eclipse.loader.impl.CompositeResourceLoader">
 	</project>
 	<project id="500" name="Base" jre="1.4" root="template/500" extends="0"
-	resouceLoader="org.seasar.dolteng.projects.loader.impl.CompositeResouceLoader">
+	resourceLoader="org.seasar.dolteng.eclipse.loader.impl.CompositeResourceLoader">
 		<handler type="classpath">
 			<entry kind="file" path="${libPath}/s2-tiger-2.4.13.jar" />
 			<entry kind="file"
@@ -207,14 +207,14 @@
 	</project>
 	<project id="510" name="Teeda Only" jre="1.5" root="template/500"
 		extends="10,500" displayOrder="TO01"
-		resouceLoader="org.seasar.dolteng.projects.loader.impl.CompositeResouceLoader">
+		resourceLoader="org.seasar.dolteng.eclipse.loader.impl.CompositeResourceLoader">
 		<handler type="classpath">
 			<entry kind="file" path="${libPath}/teeda-tiger-1.0.7.jar" />
 		</handler>
 	</project>
 	<project id="511" name="S2Dao Only" jre="1.5" extends="11,500"
 		displayOrder="TO02"
-		resouceLoader="org.seasar.dolteng.projects.loader.impl.CompositeResouceLoader">
+		resourceLoader="org.seasar.dolteng.eclipse.loader.impl.CompositeResourceLoader">
 		<handler type="classpath">
 			<entry kind="file"
 				path="${libPath}/s2-dao-tiger-1.0.43.jar" />
@@ -222,14 +222,14 @@
 	</project>
 	<project id="520" name="Super Agile(Teeda + S2Dao)" jre="1.5"
 		root="template/520" extends="20,510,511" displayOrder="TC01"
-		resouceLoader="org.seasar.dolteng.projects.loader.impl.CompositeResouceLoader">
+		resourceLoader="org.seasar.dolteng.eclipse.loader.impl.CompositeResourceLoader">
 		<handler type="default">
 			<entry kind="file" path="pom.xml" />
 		</handler>
 	</project>
 	<project id="540" name="Kuina-Dao Only" jre="1.5"
 		root="template/540" extends="500" displayOrder="TO04"
-		resouceLoader="org.seasar.dolteng.projects.loader.impl.CompositeResouceLoader">
+		resourceLoader="org.seasar.dolteng.eclipse.loader.impl.CompositeResourceLoader">
 		<handler type="default">
 			<entry kind="file" path="${mainResourcePath}/jpa.dicon" />
 			<entry kind="file"
@@ -270,11 +270,11 @@
 	</project>
 	<project id="541" name="Easy Enterprise(Teeda + Kuina-Dao)" jre="1.5"
 		root="template/541" extends="540,510" displayOrder="TC02"
-		resouceLoader="org.seasar.dolteng.projects.loader.impl.CompositeResouceLoader">
+		resourceLoader="org.seasar.dolteng.eclipse.loader.impl.CompositeResourceLoader">
 	</project>
 	<project id="5000" name="Flex2Base" jre="1.4"
 		root="template/resources,template/licenses,template/resources/data,template/jars/,template/jars/sources"
-		resouceLoader="org.seasar.dolteng.projects.loader.impl.CompositeResouceLoader">
+		resourceLoader="org.seasar.dolteng.eclipse.loader.impl.CompositeResourceLoader">
 		<handler type="default">
 			<entry kind="file" path="WEB-INF/src/licenses/LICENSE.txt" />
 			<entry kind="file"
@@ -375,7 +375,7 @@
 	<project id="50" name="SFlex2 + S2Dao" jre="1.4"
 		root="template/50"
 		extends="5000" displayOrder="C02"
-		resouceLoader="org.seasar.dolteng.projects.loader.impl.CompositeResouceLoader">
+		resourceLoader="org.seasar.dolteng.eclipse.loader.impl.CompositeResourceLoader">
 		<handler type="default">
 			<entry kind="file" path=".tomcatplugin" />
 			<entry kind="file" path="Main.mxml" />
@@ -416,7 +416,7 @@
 	</project>
 	<project id="550" name="S2Flex2 + S2Dao" jre="1.5"
 		root="template/550" extends="50" displayOrder="TC03"
-		resouceLoader="org.seasar.dolteng.projects.loader.impl.CompositeResouceLoader">
+		resourceLoader="org.seasar.dolteng.eclipse.loader.impl.CompositeResourceLoader">
 		<handler type="classpath">
 			<entry kind="file" path="WEB-INF/lib/s2-tiger-2.4.13.jar" />
 			<entry kind="file" path="WEB-INF/lib/s2-dao-tiger-1.0.43.jar" />
