--- a/plugin.xml
+++ b/plugin.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
 <plugin>
+   <extension-point id="scaffold" name="scaffold" schema="schema/scaffold.exsd"/>
    <extension
          point="org.eclipse.ui.propertyPages">
       <page
