--- a/dolteng/org.seasar.dolteng.projects/plugin.xml
+++ b/dolteng/org.seasar.dolteng.projects/plugin.xml
@@ -188,8 +188,6 @@
 		extends="0" displayOrder="O02"
 		resourceLoader="org.seasar.dolteng.eclipse.loader.impl.CompositeResourceLoader">
 		<handler type="classpath">
-			<entry kind="file"
-				path="${testLibPath}/geronimo-j2ee_1.4_spec-1.0.jar" />
 			<entry kind="file" path="${libPath}/s2-dao-1.0.43.jar" />
 		</handler>
 	</project>
@@ -236,6 +234,7 @@
 				path="${mainResourcePath}/META-INF/persistence.xml" />
 			<entry kind="file"
 				path="${mainResourcePath}/META-INF/services/javax.xml.parsers.SAXParserFactory" />
+			<entry kind="file" path="${testResourcePath}/s2junit4.dicon" />
 		</handler>
 		<handler type="classpath">
 			<entry kind="file" path="${libPath}/antlr-2.7.6.jar" />
@@ -244,8 +243,6 @@
 			<entry kind="file" path="${libPath}/commons-lang-2.1.jar" />
 			<entry kind="file" path="${libPath}/dom4j-1.6.1.jar" />
 			<entry kind="file" path="${libPath}/ehcache-1.2.jar" />
-			<entry kind="file"
-				path="${testLibPath}/geronimo-j2ee_1.4_spec-1.0.jar" />
 			<entry kind="file"
 				path="${libPath}/geronimo-annotation_1.0_spec-1.0.jar" />
 			<entry kind="file"
@@ -266,6 +263,9 @@
 			<entry kind="file" path="${libPath}/lucene-core-2.0.0.jar" />
 			<entry kind="file"
 				path="${libPath}/s2hibernate-jpa-1.0.0.jar" />
+			<entry kind="file"
+				path="${testLibPath}/geronimo-servlet_2.4_spec-1.0.jar" />
+			<entry kind="file" path="${testLibPath}/junit-4.3.1.jar" />
 		</handler>
 	</project>
 	<project id="541" name="Easy Enterprise(Teeda + Kuina-Dao)" jre="1.5"
